# f1-api

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
src/f1_terminal/: __init__.py  config.py
src/f1_terminal/api/: app.py
src/f1_terminal/api/routers/: __init__.py  catalogue.py  drivers.py  laps.py  results.py  session_summary.py  stints.py
src/f1_terminal/console/: __init__.py  _render.py  cli.py  commands.py  repl.py
src/f1_terminal/db/: __init__.py  engine.py  models.py
src/f1_terminal/schemas/: __init__.py  drivers.py  laps.py  results.py  session_summary.py  stints.py
src/f1_terminal/services/: catalogue.py  drivers.py  laps.py  results.py  session_summary.py  stints.py
tests/: conftest.py  test_api_components.py  test_api_laps.py
