[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-terminal"
version = "0.1.0"
description = "F1 terminal backend: lap-time & tire-data API plus a command console (REPL), built on the f1-db dataset."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
]

# NOTE: the read-only data dependency `f1db` lives in the sibling repo `../f1-db`
# and is installed separately (editable):  pip install -e ../f1-db
# It is intentionally not listed here to avoid a brittle absolute path dependency.
# (Formerly vendored as a git submodule at external/f1-db; that submodule was removed.)

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
f1term = "f1_terminal.console.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
